--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,11 +2,20 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>created</strong><br>
-  <%= @post.conetent %>
-  <%= @post.title %>
-    
+  <strong>conetent</strong><br>
+  <%= @post.conetent %><br>
+  <strong>title</strong><br>
+  <%= @post.title %><br>
+  <strong>post</strong><br>
+  <%= @post.image %>
 </p>
+
+<div style="width:100px;height:auto">
+<%= link_to image_tag(@post.avatar, style:"width:200%"), post_path %>
+</div>
+
+
+
 <% if current_user.likes.find_by(post: @post).nil? %>
 <form action="/likes" method="post">
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
@@ -16,6 +25,30 @@
 <% else %>
 unlike
 <% end %>
+
+<br>
+<h2><%= @post.comments.count %> comment</h2>
+<% @post.comments.each do |comment| %>
+  
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.content %>
+  </p>
+<% end %>
+<%= render 'comments/form', locals: {post: @post} %>
+
+
+
+
+
+
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
+<%= link_to "Destroy", post_path(@post),
+                  method: :delete,
+                  data: { confirm: "Are you sure?" } %> |
 <%= link_to 'Back', posts_path %>
+ 
+
+
 </body>
