--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,54 +1,25 @@
 <body class="container">
 <p id="notice"><%= notice %></p>
-
 <p>
-  <strong>conetent</strong><br>
-  <%= @post.conetent %><br>
-  <strong>title</strong><br>
+  <strong>Title</strong><br>
   <%= @post.title %><br>
-  <strong>post</strong><br>
-  <%= @post.image %>
+  <strong>Content</strong><br>
+  <%= @post.conetent %><br>
 </p>
 
-<div style="width:100px;height:auto">
-<%= link_to image_tag(@post.avatar, style:"width:200%"), post_path %>
+<div style="width:100px;height:auto my-3">
+<%= link_to image_tag(@post.avatar, style:"width:500%"), post_path %>
 </div>
+<%= link_to 'Edit', edit_post_path(@post),  class: "btn btn-warning my-3" %> 
+<%= link_to "Destroy", post_path(@post), 
+                  method: :delete,   
+                  data: { confirm: "Are you sure?" }, class: "btn btn-danger my-3" %> <br>
 
 
+<%= render "comments/comment", locals: {post: @post.comments } %>  
 
-<% if current_user.likes.find_by(post: @post).nil? %>
-<form action="/likes" method="post">
-<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-<input type="hidden" name="like[post_id]" value="<%= @post.id %>">
-<input type="button" value= "like">
-</form>
-<% else %>
-unlike
-<% end %>
-
-<br>
-<h2><%= @post.comments.count %> comment</h2>
-<% @post.comments.each do |comment| %>
-  
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.content %>
-  </p>
-<% end %>
 <%= render 'comments/form', locals: {post: @post} %>
 
-
-
-
-
-
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to "Destroy", post_path(@post),
-                  method: :delete,
-                  data: { confirm: "Are you sure?" } %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path, class: "btn btn-primary my-3" %>
  
-
-
 </body>
