--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,37 @@
 <body class="container">
-<h1>post</h1>
-<ul>
+ <%= link_to 'Create your post', new_post_path, class: "btn btn-primary btn-lg mb-2"%>
   <% @posts.each do |post| %>
-    <li>
-     <a href="<%= post_path(post) %>">
-      <%= link_to post.title, post %>
-    
-    </li>
+    <% if post.title.present? %>
+      <div class="card" style="background-color:azure;">
+        <div class="card-body">
+          <strong><%= post.title %></strong><br>
+          <%= post.conetent %>
+        </div>
+        <div class="my-3 ml-3">
+        <% if current_user.likes.find_by(post: @post).nil? %>
+          <form action="/likes" method="post">
+          <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+          <input type="hidden" name="like[post_id]" value="<%= post.id %>">
+          <input type="button" value= "like">
+          </form>
+          <% else %>
+          unlike
+          <% end %>
+          </div>
+          <span class="ml-3 mb-3">
+          <%= link_to 'Show', post_path(post), class: "btn btn-success"%>
+          <%= link_to 'Edit', edit_post_path(post),  class: "btn btn-warning" %> 
+          <%= link_to "Destroy", post_path(post), 
+                  method: :delete,   
+                  data: { confirm: "Are you sure?" }, class: "btn btn-danger" %> 
+          </span>
+      </div>
+    <% end %>
+    <br>
   <% end %>
-    
-</ul> 
-<form action="/likes" method="post">
-<input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-<input type="hidden" name="like[post_id]" value="<%= @post %>">
-<input type="button" value= "like">
-</form>
- 
-
-
-<%= link_to 'create post', new_post_path, class: "btn btn-primary"%>
-
+<div style="float: right;">
+  <%= will_paginate @posts, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+</div>
 </body>
 
 
