--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,8 @@
 <h1>Edit my post</h1>
-
-<%= render "form", post: @post %>
+<% if user_signed_in? %>
+<% if @post.user.id == current_user.id %>
+  <%= render 'form', post: @post %>
+<% end %>
+<% else %>
+  <h1>stop trying to edit others post</h1>
+<% end %>
