--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,36 +1,32 @@
 <body class="container">
- <%= link_to 'Create your post', new_post_path, class: "btn btn-primary btn-lg mb-2"%>
+<div id="post-form">
+ <%= link_to 'Create your post', new_post_path, remote: true, class: "btn btn-primary btn-lg mb-2"%>
+</div>
   <% @posts.each do |post| %>
     <% if post.title.present? %>
       <div class="card" style="background-color:azure;">
         <div class="card-body">
           <strong><%= post.title %></strong><br>
-          <%= post.conetent %>
+          <p><%= truncate post.conetent, length: 200 %><span><%= link_to 'Read more', post %></span>
         </div>
         <div class="my-3 ml-3">
-        <% if current_user.likes.find_by(post: @post).nil? %>
-          <form action="/likes" method="post">
-          <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-          <input type="hidden" name="like[post_id]" value="<%= post.id %>">
-          <input type="button" value= "like">
-          </form>
-          <% else %>
-          unlike
-          <% end %>
+       
           </div>
           <span class="ml-3 mb-3">
           <%= link_to 'Show', post_path(post), class: "btn btn-success"%>
-          <%= link_to 'Edit', edit_post_path(post),  class: "btn btn-warning" %> 
-          <%= link_to "Destroy", post_path(post), 
+          <% if post.user.id == current_user.id %>
+            <%= link_to 'Edit', edit_post_path(post),  class: "btn btn-warning" %> 
+            <%= link_to "Destroy", post_path(post), 
                   method: :delete,   
                   data: { confirm: "Are you sure?" }, class: "btn btn-danger" %> 
+          <% end %>  
           </span>
       </div>
     <% end %>
     <br>
   <% end %>
 <div style="float: right;">
-  <%= will_paginate @posts, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %>
+<%= will_paginate @posts, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %> 
 </div>
 </body>
 
