add maile to user

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,5 +4,6 @@
   </head>
   <body>
     <p>Thanks for creating post and have a great day!</p>
+    <%# <% Email: @user.email %> 
   </body>
 </html>
