--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <body class="container">
-<div id="post-form">
- <%= link_to 'Create your post', new_post_path, remote: true, class: "btn btn-primary btn-lg mb-2"%>
+<div id="post-form"> 
+<%= link_to 'Create your post', new_post_path, remote: true, class: "btn btn-primary btn-lg mb-2"%>
 </div>
   <% @posts.each do |post| %>
     <% if post.title.present? %>
@@ -19,23 +19,20 @@
             <%= link_to "Destroy", post_path(post), 
                   method: :delete,   
                   data: { confirm: "Are you sure?" }, class: "btn btn-danger" %> 
+
           <% end %>  
+          <button type="button" class="btn btn-warning" id="cliked" data-id= '<%= post.id %>' >Click</button>
           </span>
       </div>
     <% end %>
     <br>
   <% end %>
 <div style="float: right;">
-<%= will_paginate @posts, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %> 
+ <%# <%= will_paginate @posts, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %> 
 </div>
 </body>
-
-
-
-
-
-
-
+<%= link_to "PDF", posts_path(format: :pdf), class: "btn btn-primary btn-lg mb-2" %>
+<%= link_to 'This post in PDF', posts_path(@post, format: :pdf) %>
 
 
 
