Adding all files

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,8 +1,9 @@
-<% @comment.comments.each do |comment| %>
-
-  
-  
- 
-  
-  <%= comment.content %>
-  
+<h2>Comments</h2><br>
+  <% @post.comments.each do |comment| %> 
+    <small>by <%= comment.user.email %></small><br>
+    <%= comment.content %><br>  
+    <%= link_to 'Destroy', [comment.post, comment],
+              method: :delete,
+              data: { confirm: "Are you sure?" }, class: "btn btn-warning btn-sm" %>
+  <hr>
+  <% end %>   
