--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,21 +1,9 @@
 
-
-
-
-<p>
-<strong>comment</strong>
-  </p>
-
-<%= form_with model: [ @post, @post.comments.build ] do |form| %>
-  
-  <p>
-    <%= form.label :content %><br>
-    <%= form.text_area :content %>
-  </p>
-  <p>
+<%= bootstrap_form_with model: [ @post, @post.comments.build ] do |form| %>
+  <%= form.hidden_field :user_id, value: current_user.id %>
+  <%= form.hidden_field :post_id, value: @post.id %>
+  <%= form.text_area :content %>
   <div class="actions">
     <%= form.submit %>
     </div>
-  </p>
-
 <% end %>
