--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,18 @@
+<body class="container">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+<div class="field">
+    <%= f.text_field :first_name %>
+  </div>
 
+<div class="field">
+    <%= f.text_field :lastname %>
+  </div>
+  
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+   <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -22,7 +29,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
@@ -40,4 +47,5 @@
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back, {class:'btn btn-primary'} %>
+</body>
