--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,7 @@
 <body class="container">
-<p id="notice"><%= notice %></p>
+
 <p>
+
   <strong>Title</strong><br>
   <%= @post.title %><br>
   <strong>Content</strong><br>
@@ -12,21 +13,28 @@
 <div style="width:100px;height:auto my-3">
   <%= link_to image_tag(@post.avatar, style:"width:500%"), post_path %>
 </div>
-<% if @post.user.id == current_user.id %>
-   <%= link_to 'Edit', edit_post_path(@post),  class: "btn btn-warning my-3" %> 
+
+<% if @post.user.id == current_user.id %> 
+ <%# <% if current_user.has_role? :user %> 
+
+   <%= link_to 'Edit', edit_post_path(@post), class: "btn btn-warning my-3" %> 
    <%= link_to "Destroy", post_path(@post), 
                   method: :delete,   
-                  data: { confirm: "Are you sure?" }, class: "btn btn-danger my-3" %> <br>
+                  data: { confirm: "Are you sure?",remote: true }, class: "btn btn-danger my-3" %> <br>
 
 <% end %> 
 <%= @post.likes.count %> 
 <%= (@post.likes.count) == 1 ? 'Like': 'Likes' %>
 <% pre_like = @post.likes.find { |like| like.user_id == current_user.id} %>
 <% if pre_like %>
-   <%= button_to 'Unlike', post_like_path(@post, pre_like), method: :delete, :class => 'btn btn-success', :style => 'border-radius: 25px;' %>
+   <%= button_to 'Unlike', post_like_path(@post, pre_like),remote: true, method: :delete, :class => 'btn btn-success', :style => 'border-radius: 25px;' %>
  <% else %>
-   <%= button_to 'Like', post_likes_path(@post), method: :post, :class => 'btn btn-success', :style => 'border-radius: 25px;' %>
+   <%= button_to 'Like', post_likes_path(@post),remote: true, method: :post,  :class => 'btn btn-success',  :style => 'border-radius: 25px;' %>
 <% end %>
+
+  
+
+
 <%= render "comments/comment", locals: {post: @post.comments } %>  
 <%= render 'comments/form', locals: {post: @post} %>
 <%= link_to 'Back', posts_path, class: "btn btn-primary my-3" %>
