--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,42 @@
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Mypost">Mypost</a>
+        </li>
+        
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  post modal
+</button>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">post title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+       <% Post.all.each do |post| %> 
+  <div class="card mt-3 post" style="background-color:azure;">
+    
+        <span><%= post.title %></span>
+    </div>
+
+<% end %>
+     </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
       </ul>
       <form class="form-inline my-2 mr-4 my-lg-0" method="get" action="/search" >
        <input class="form-control mr-sm-2"type="search" placeholder="Search" aria-label="Search" name="query">
