--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,42 +1,71 @@
 <body class="container">
+
 <div id="post-form"> 
 <%= link_to 'Create your post', new_post_path, remote: true, class: "btn btn-primary btn-lg mb-2"%>
 </div>
+
   <% @posts.each do |post| %>
+  <%# <%= render :partial => post.comments %> 
+
     <% if post.title.present? %>
       <div class="card" style="background-color:azure;">
         <div class="card-body">
           <strong><%= post.title %></strong><br>
           <p><%= truncate post.conetent, length: 200 %><span><%= link_to 'Read more', post %></span>
         </div>
-        <div class="my-3 ml-3">
-       
-          </div>
-          <span class="ml-3 mb-3">
+        
+        <div style="width:100px;height:auto my-3 ">
+        <%= link_to image_tag(post.avatar, style:"width:100%"), @post_path %>
+      
+        </div>
+        <% pre_like = post.likes.find { |like| like.user_id == current_user.id} %>
+           <% if pre_like %>
+              <%= button_to 'Unlike', post_like_path(post, pre_like),remote: true, method: :delete, :class => 'btn btn-success', :style => 'border-radius: 25px;' %>
+           <% else %>
+              <%= button_to 'Like', post_likes_path(post),remote: true, method: :post, :class => 'btn btn-success', :style => 'border-radius: 25px;' %>
+              <%= post.likes.count %> <%= (post.likes.count) == 1 ? 'Like' : 'Likes'%>
+           <% end %>
+          <span class=" mb-3">
           <%= link_to 'Show', post_path(post), class: "btn btn-success"%>
-          <% if post.user.id == current_user.id %>
-            <%= link_to 'Edit', edit_post_path(post),  class: "btn btn-warning" %> 
+          <%# <% if current_user.has_role? :user %> 
+
+          <% if post.user.id == current_user.id %> 
+            <%= link_to 'Edit', edit_post_path(post), class: "btn btn-warning" %> 
             <%= link_to "Destroy", post_path(post), 
                   method: :delete,   
-                  data: { confirm: "Are you sure?" }, class: "btn btn-danger" %> 
-
+                  data: { confirm: "Are you sure?",remote: true}, class: "btn btn-danger" %> 
+                 
           <% end %>  
           <button type="button" class="btn btn-warning" id="cliked" data-id= '<%= post.id %>' >Click</button>
+           
+          
           </span>
       </div>
     <% end %>
     <br>
+    
   <% end %>
 <div style="float: right;">
- <%# <%= will_paginate @posts, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %> 
+  <%= will_paginate @posts, renderer: WillPaginate::ActionView::BootstrapLinkRenderer %> 
 </div>
 </body>
 <%= link_to "PDF", posts_path(format: :pdf), class: "btn btn-primary btn-lg mb-2" %>
-<%= link_to 'This post in PDF', posts_path(@post, format: :pdf) %>
+<%= link_to 'This post in PDF', posts_path(@post, format: :pdf), class: "btn btn-primary btn-lg mb-2" %>
 
 
-
-
-
-
+<!-- Modal -->
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="createModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Post Successfully created!
+      </div>
+    </div>
+  </div>
+</div>
 
