--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,13 +14,8 @@
     margin-right: 8px;
 }
 
-.button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
+body{
+    background-image: url("https://cdn.pixabay.com/photo/2015/07/17/22/43/student-849825__340.jpg");
+    height: 750px;
+    background-size: cover;
+}
