--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,8 @@
     margin-right: 8px;
 }
 
-body{
-    background-image: url("https://cdn.pixabay.com/photo/2015/07/17/22/43/student-849825__340.jpg");
-    height: 750px;
-    background-size: cover;
-}
+// body{
+//     background-image: url("https://cdn.pixabay.com/photo/2015/07/17/22/43/student-849825__340.jpg");
+//     height: 750px;
+//     background-size: cover;
+// }
